integration-tests/tests/errors/views/js-syntax-error-inline.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderInlineAgent() %>
  <script id="scenario">
    var abc=;
  </script>
</head>
<body>
  <h1>Manual console.error</h1>
  <pre id="scenarioDisplay"></pre>
  <script>scenarioDisplay.innerHTML = scenario.innerHTML;</script>
  <%- renderAgent({}) %>
</body>
</html>
